--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-parameters.env
-.DS_Store
-vendor
-.phpdoc
-data
-.vscode
+# Environment variables
+.env
+.env.example
+
+# Docker
+Dockerfile
+docker-compose.yml
+docker-compose.yaml
+
+# Apache
 .htaccess
-docs/manual_tecnico
-composer.lock
-phpdoc.dist.xml
+
+# Dependencies
+/vendor/
+/node_modules/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+nul
+
+# IDEs
+.vscode/
+.idea/
+.claude/
